# PrimeNumberCheck

./: CMakeLists.txt  README.md
include/: prime_check.hpp
src/: CMakeLists.txt  main.cpp  prime_check.cpp
test/: CMakeLists.txt  test_prime_check.cpp
